--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.25'
 
       # Install xcaddy for binary building
       - name: Get xcaddy tool
@@ -108,7 +108,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.ssh
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-ssh
